--- a/appgain-sdk/app/src/main/res/layout/automator_dialog.xml
+++ b/appgain-sdk/app/src/main/res/layout/automator_dialog.xml
@@ -18,7 +18,7 @@
 
 
         <android.support.design.widget.TextInputLayout
-            android:id="@+id/username_input_layout"
+            android:id="@+id/trigger_point_name_input_layout"
             android:layout_marginStart="24dp"
             android:layout_marginEnd="24dp"
             android:textColorHint="@color/grey_600"
@@ -26,10 +26,10 @@
             android:layout_height="wrap_content">
 
             <android.support.design.widget.TextInputEditText
-                android:id="@+id/username_input"
+                android:id="@+id/trigger_point_name_input"
                 android:textSize="16dp"
                 android:textColor="@color/grey_900"
-                android:hint="Username"
+                android:hint="trigger point name"
                 android:inputType="text"
                 android:maxLines="1"
                 android:imeOptions="actionNext"
@@ -40,50 +40,6 @@
             <requestFocus/>
         </android.support.design.widget.TextInputLayout>
 
-
-        <android.support.design.widget.TextInputLayout
-            android:id="@+id/user_email_input_layout"
-            android:layout_marginStart="24dp"
-            android:layout_marginEnd="24dp"
-            android:textColorHint="@color/grey_600"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-
-            <android.support.design.widget.TextInputEditText
-                android:id="@+id/user_email_input"
-                android:textSize="16dp"
-                android:textColor="@color/grey_900"
-                android:hint="Email"
-                android:inputType="text"
-                android:maxLines="1"
-                android:imeOptions="actionNext"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                />
-        </android.support.design.widget.TextInputLayout>
-
-        <android.support.design.widget.TextInputLayout
-            android:id="@+id/user_password_input_layout"
-            android:layout_marginStart="24dp"
-            android:layout_marginEnd="24dp"
-            android:textColorHint="@color/grey_600"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:passwordToggleEnabled="true"
-            >
-
-            <android.support.design.widget.TextInputEditText
-                android:id="@+id/user_password_input"
-                android:textSize="16dp"
-                android:textColor="@color/grey_900"
-                android:hint="Password"
-                android:inputType="textPassword"
-                android:maxLines="1"
-                android:imeOptions="actionDone"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                />
-        </android.support.design.widget.TextInputLayout>
 
 
 
