--- a/appgain-sdk/app/src/main/res/layout/config_dialog.xml
+++ b/appgain-sdk/app/src/main/res/layout/config_dialog.xml
@@ -1,11 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout android:layout_gravity="center"
+<LinearLayout
+    android:layout_gravity="center"
     android:orientation="vertical"
     android:background="@color/white"
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
+    android:layout_height="wrap_content">
 
     <LinearLayout
         android:id="@+id/user_info_layout"
@@ -18,7 +17,7 @@
 
 
         <android.support.design.widget.TextInputLayout
-            android:id="@+id/username_input_layout"
+            android:id="@+id/app_id_input_layout"
             android:layout_marginStart="24dp"
             android:layout_marginEnd="24dp"
             android:textColorHint="@color/grey_600"
@@ -26,10 +25,10 @@
             android:layout_height="wrap_content">
 
             <android.support.design.widget.TextInputEditText
-                android:id="@+id/username_input"
+                android:id="@+id/app_id_input"
                 android:textSize="16dp"
                 android:textColor="@color/grey_900"
-                android:hint="Username"
+                android:hint="App id"
                 android:inputType="text"
                 android:maxLines="1"
                 android:imeOptions="actionNext"
@@ -42,7 +41,7 @@
 
 
         <android.support.design.widget.TextInputLayout
-            android:id="@+id/user_email_input_layout"
+            android:id="@+id/api_key_input_layout"
             android:layout_marginStart="24dp"
             android:layout_marginEnd="24dp"
             android:textColorHint="@color/grey_600"
@@ -50,41 +49,38 @@
             android:layout_height="wrap_content">
 
             <android.support.design.widget.TextInputEditText
-                android:id="@+id/user_email_input"
+                android:id="@+id/api_key_input"
                 android:textSize="16dp"
                 android:textColor="@color/grey_900"
-                android:hint="Email"
+                android:hint="API Key "
                 android:inputType="text"
                 android:maxLines="1"
                 android:imeOptions="actionNext"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 />
+
+            <requestFocus/>
         </android.support.design.widget.TextInputLayout>
 
-        <android.support.design.widget.TextInputLayout
-            android:id="@+id/user_password_input_layout"
-            android:layout_marginStart="24dp"
+        <RadioGroup
             android:layout_marginEnd="24dp"
-            android:textColorHint="@color/grey_600"
+            android:layout_marginStart="24dp"
+            android:orientation="horizontal"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:passwordToggleEnabled="true"
-            >
-
-            <android.support.design.widget.TextInputEditText
-                android:id="@+id/user_password_input"
-                android:textSize="16dp"
-                android:textColor="@color/grey_900"
-                android:hint="Password"
-                android:inputType="textPassword"
-                android:maxLines="1"
-                android:imeOptions="actionDone"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                />
-        </android.support.design.widget.TextInputLayout>
-
+            android:layout_height="wrap_content">
+            <RadioButton
+                android:checked="true"
+                android:id="@+id/io"
+                android:text="io"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+            <RadioButton
+                android:id="@+id/stg"
+                android:text="stg"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+        </RadioGroup>
 
 
     </LinearLayout>
