--- a/appgain-sdk/app/src/main/res/layout/config_dialog.xml
+++ b/appgain-sdk/app/src/main/res/layout/config_dialog.xml
@@ -40,6 +40,7 @@
         </android.support.design.widget.TextInputLayout>
 
 
+
         <android.support.design.widget.TextInputLayout
             android:id="@+id/api_key_input_layout"
             android:layout_marginStart="24dp"
@@ -60,7 +61,51 @@
                 android:layout_height="wrap_content"
                 />
 
-            <requestFocus/>
+        </android.support.design.widget.TextInputLayout>
+
+
+        <android.support.design.widget.TextInputLayout
+            android:id="@+id/parse_app_id_key_input_layout"
+            android:layout_marginStart="24dp"
+            android:layout_marginEnd="24dp"
+            android:textColorHint="@color/grey_600"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <android.support.design.widget.TextInputEditText
+                android:id="@+id/parse_app_id_key_input"
+                android:textSize="16dp"
+                android:textColor="@color/grey_900"
+                android:hint="Parse app id "
+                android:inputType="text"
+                android:maxLines="1"
+                android:imeOptions="actionNext"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                />
+
+        </android.support.design.widget.TextInputLayout>
+
+        <android.support.design.widget.TextInputLayout
+            android:id="@+id/parse_server_name_input_layout"
+            android:layout_marginStart="24dp"
+            android:layout_marginEnd="24dp"
+            android:textColorHint="@color/grey_600"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <android.support.design.widget.TextInputEditText
+                android:id="@+id/parse_server_name_key_input"
+                android:textSize="16dp"
+                android:textColor="@color/grey_900"
+                android:hint="parse server name"
+                android:inputType="text"
+                android:maxLines="1"
+                android:imeOptions="actionDone"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                />
+
         </android.support.design.widget.TextInputLayout>
 
         <RadioGroup
