--- a/appgain-sdk/app/src/main/res/layout/automator_dialog.xml
+++ b/appgain-sdk/app/src/main/res/layout/automator_dialog.xml
@@ -7,6 +7,7 @@
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
+
     <LinearLayout
         android:id="@+id/user_info_layout"
         android:layout_marginBottom="16dp"
@@ -16,6 +17,20 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
+
+        <TextView
+
+            android:layout_gravity="end"
+            android:clickable="true"
+            android:textColor="@color/colorAccent"
+            android:textSize="16dp"
+            android:layout_marginEnd="16dp"
+            android:layout_marginStart="16dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Add Personalization"
+            android:id="@+id/dialog_add"
+            />
 
         <android.support.design.widget.TextInputLayout
             android:id="@+id/trigger_point_name_input_layout"
@@ -41,6 +56,12 @@
         </android.support.design.widget.TextInputLayout>
 
 
+
+
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/personalizationRecycler"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"/>
 
 
     </LinearLayout>
